--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/KhanOfTheMoon/Blockchain_final/issues"
   },
@@ -37,7 +37,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^25.2.0",
     "chai": "^4.5.0",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.2.4",
     "ethers": "^6.16.0",
     "hardhat": "^2.28.4",
     "hardhat-gas-reporter": "^2.3.0",
